[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/shopMsg/shopMsg.gd" type="Script" id=1]
[ext_resource path="res://ui/msgBaseX/msgBaseX.tscn" type="PackedScene" id=2]

[node name="msgBaseX" instance=ExtResource( 2 )]
visible = true
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="." index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -670.0
margin_top = -334.0
margin_right = 682.0
margin_bottom = 358.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="CenterContainer" parent="Panel" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -510.0
margin_top = -265.0
margin_right = 491.0
margin_bottom = 181.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Panel/ScrollContainer" index="0"]
margin_left = 500.0
margin_top = 223.0
margin_right = 500.0
margin_bottom = 223.0
mouse_filter = 0
columns = 5

[node name="Button" type="Button" parent="Panel" index="1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -79.0
margin_right = 41.0
margin_bottom = -35.6246
text = "离开"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Panel" index="2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -144.0
margin_right = 76.2075
margin_bottom = -91.6246
text = "看视频刷新商店"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel" index="3"]
margin_left = 1155.0
margin_top = 538.0
margin_right = 1262.0
margin_bottom = 580.0
text = "100g"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Panel" index="4"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 14.0
margin_right = 20.0
margin_bottom = 47.0
text = "商店"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_Button2_pressed"]
